<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.techytec.swipethearrow.SettingActivity">

    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="@null"
        android:layout_margin="15dp"
        android:src="@drawable/cross_black"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="25dp"
            android:text="@string/settings"
            android:textAllCaps="true"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/settings"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:textSize="19sp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/shareapp" />

        <Button
            android:id="@+id/rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/share"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:textSize="19sp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/rateapp" />

        <Button
            android:id="@+id/tutorial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rate"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:textSize="19sp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/tutorial" />

        <Button
            android:id="@+id/contactus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tutorial"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:textSize="19sp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/contactus" />

        <Button
            android:id="@+id/moreapps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contactus"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:textSize="19sp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/moreapps" />

    </RelativeLayout>
</RelativeLayout>
